fix(plugins/plugin-client-common): in splits, spinner is not centered
Fixes #7129

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Spinner.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Spinner.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-@import '_mixins';
+@import 'mixins';
 
 @mixin Spinner {
   .kui--repl-block-spinner {
@@ -35,6 +35,9 @@
 
   /* see https://github.com/IBM/kui/issues/6885 */
   padding-bottom: 1px;
+
+  /* see https://github.com/IBM/kui/issues/7129 */
+  margin: $inset / $right-element-font-size-factor 0;
 }
 .repl-context {
   @include Spinner {
